Kubernetes/Istio-System/single-cp/istio-ingress-gw.yaml

##----- Ingress GW -----##
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*/*..com'
    - '*/.com'
    port:
      name: HTTPS
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: mysecret
---
